# networks-course

week01/: ex1  ex1.c
week04/: client.c  server.c
week05/: client.c  common.h  server.c
week06/: .gitignore  CMakeLists.txt  protocol.md  week06.cbp
week06/include/: bootstrap.h  common.h  control.h  event_loop.h  file_transfer.h  globals.h  handlers.h  known_files.h  known_nodes.h  my_files.h  requests.h  serializers.h
week06/include/ds/: hashmap.h  json.h  refcounter.h  vector.h
week06/src/: app.c  app.h  bootstrap.c  client.c  client.h  control.c  event_loop.c  file_transfer.c  handlers.c  known_files.c  known_nodes.c  known_nodes_hashmap.c  known_nodes_hashmap.h  magic.h  main.c  my_files.c  pings.c  requests.c  serializers.c  server.c
week06/src/ds/: hashmap.c  refcounter.c  vector.c
week06/src/ds/json/: interface.c  parser.c
week06d/: CMakeLists.txt  README.md
week06d/include/: client_context.h  event_loop.h  globals.h  handlers.h  known_nodes_hashmap.h  logging.h  magic.h  node.h  pings.h  requests.h  server.h
week06d/src/: bootstrap.c  client_context.c  event_loop.c  handlers.c  known_nodes_hashmap.c  logging.c  main.c  pings.c  requests.c  server.c
